--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
 
+We appreciate your commitment and dedication, especially after returning from maternity leave. We recognize your proactive approach in skilling up in Java full stack development, and we are confident that this will enhance your capabilities and future contributions. Your eagerness to improve and adapt is commendable. Moving forward, we encourage you to continue focusing on enhancing your technical skills and actively participating in team projects. We believe this will not only improve your proficiency but also contribute significantly to our team's success. Keep up the good work!
+
